--- a/app/views/pages/_header.html.erb
+++ b/app/views/pages/_header.html.erb
@@ -27,12 +27,12 @@
                         <b class="caret"></b>
                     </a>
                     <ul class="dropdown-menu">
-                        <li><a href="/pages/product">瑞信云产品</a></li>
-                        <li><a href="/pages/service">瑞信云服务</a></li>
-                        <li><a href="/pages/features">功能介绍</a></li>
+                        <li><a href="/pages/service_market">全方位网络营销托管</a></li>
+                        <li><a href="/pages/service_website">企业营销型网站建设</a></li>
+                        <li><a href="/pages/service_app">手机应用开发(APP)</a></li>
                         <li><a href="/product_cates/1">成功案例</a></li>
-                        <li><a href="/pages/showcase">行业应用方案</a></li>
-                        <li><a href="/pages/markting">智能网络营销系统:雨服务</a></li>
+                        <li><a href="/pages/showcase">行业网络营销解决方案</a></li>
+                        <li><a href="/pages/yu">智能网络营销系统——雨系统</a></li>
                     </ul>
                 </li>
                 
