--- a/app/views/pages/blog.html.erb
+++ b/app/views/pages/blog.html.erb
@@ -1,3 +1,7 @@
+<% title ["移动营销天地-博客",  "瑞信云"].join('-') %>
+<% meta_keywords ["移动营销天地", "瑞信云"].join('-') %>
+<% meta_description ["移动营销天地", "瑞信云"].join('-') %>
+
 <%= content_for(:head) do %>
   <%= stylesheet_link_tag "theme/blog" %>
 <% end %>
