--- a/app/views/pages/blogpost.html.erb
+++ b/app/views/pages/blogpost.html.erb
@@ -1,6 +1,6 @@
-<% title [@post.title,  "瑞信云"].join(',') %>
-<% meta_keywords [@post.title, @post.keywords, "瑞信云"].join(',') %>
-<% meta_description [ @post.title,  @post.keywords, "瑞信云"].join(',') %>
+<% title [@post.title,  "瑞信云"].join('-') %>
+<% meta_keywords [@post.title, @post.keywords, "瑞信云"].join('-') %>
+<% meta_description [ @post.title,  @post.keywords, "瑞信云"].join('-') %>
 
 
 <%= content_for(:head) do %>
