--- a/app/views/pages/show.html.erb
+++ b/app/views/pages/show.html.erb
@@ -1,4 +1,4 @@
-<% title [@page.title,  "瑞信云"].join(',') %>
+<% title [@page.title,  "瑞信云"].join('-') %>
 <% meta_keywords [@page.title, @page.keywords, "瑞信云"].join(',') %>
 <% meta_description [ @page.title,  @page.keywords, "瑞信云"].join(',') %>
 
