--- a/app/views/layouts/page.html.erb
+++ b/app/views/layouts/page.html.erb
@@ -2,9 +2,9 @@
 <html>
   <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title><%= content_for?(:title) ? yield(:title) : "瑞信云科技" %></title>
-    <meta name="keywords" content="<%= content_for?(:keywords) ? yield(:keywords) : "瑞信云科技" %>">
-    <meta name="description" content="<%= content_for?(:description) ? yield(:description) : "瑞信云科技 Rxy Cloud" %>">
+    <title><%= content_for?(:title) ? yield(:title) : "瑞信云" %></title>
+    <meta name="keywords" content="<%= content_for?(:keywords) ? yield(:keywords) : "瑞信云" %>">
+    <meta name="description" content="<%= content_for?(:description) ? yield(:description) : "瑞信云,企业全方位网络营销托管,企业营销型网站建设,低价手机应用开发,APP开发" %>">
     
     <%= stylesheet_link_tag "pages" %>
     <link href='http://fonts.googleapis.com/css?family=Lato:300,400,700,900,300italic,400italic,700italic,900italic' rel='stylesheet' type='text/css'>
